Added Drawing Canvas
Added drawing canvas to homepage of Flask website, with a color picker and thickness slider

--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="canvas.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/css/canvas.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 
@@ -23,6 +23,6 @@
       <input type="color" id="colorpicker" value="#000000"/>
     </div>
 
-    <script src="canvas.js"></script>
+    <script src="/static/javascript/canvas.js"></script>
   </body>
 </html>
