Updated Canvas Drawing
Added Lagrange polynomial smoothing for macro movements and moving average smoothing for micro movements

--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -1,15 +1,15 @@
 <!-- 
-    Author: Eron Ristich
-    Date: 9/21/21
-    File: ./neonify/templates/canvas.html
-    Description: Create template for drawing canvas
+  Author: Eron Ristich
+  Date: 9/21/21
+  File: ./neonify/templates/canvas.html
+  Description: Create template for drawing canvas
  -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>neonify</title>
     <link href="/static/css/canvas.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
