--- a/neonify/static/css/canvas.css
+++ b/neonify/static/css/canvas.css
@@ -1,3 +1,10 @@
+/*
+  Author: Eron Ristich
+  Date: 9/21/21
+  File: ./neonify/static/css/canvas.css
+  Description: Styling scripts for the canvas template 
+*/
+
 #drawingCanvas {
     border: 1px dotted #000000;
 }
