--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -13,10 +13,9 @@
     <link href="/static/css/canvas.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-
     <div>Drawing Test</div>
     <div class="container" style="display: flex;">
-      <canvas id="drawingCanvas" width=500px height=500px onmousedown="pendown(event)" onmouseup="penup()">
+      <canvas id="drawingCanvas" width="1000" height="1000" style="width: 500px; height: 500px;"></canvas>
         
       </canvas>
       <input id="weight" min="1" type="range" orient="vertical"/>
