Added Image Previews
Added buttons to preview the neonified image and download a file containing the image data (that have png headers, but not the png file extension)

--- a/neonify/static/css/canvas.css
+++ b/neonify/static/css/canvas.css
@@ -8,15 +8,22 @@
 #drawingCanvas {
     border: 1px dotted #000000;
 }
+
+#canvasImg {
+    float: left;
+    padding: 50px;
+}
   
 #weight {
     float: left;
+    padding: 50px;
 }
   
 #colorpicker {
     float: left;
     width: 20px;
     height: 175px;
+    padding: 50px;
 }
   
 input[type=range][orient=vertical] {
