--- a/neonify/static/css/canvas.css
+++ b/neonify/static/css/canvas.css
@@ -5,6 +5,12 @@
     Description: Styling scripts for the canvas template 
 */
 
+* { 
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
 #drawingCanvas {
     border: 1px dotted #000000;
 }
