--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -19,8 +19,11 @@
 
       <input id="weight" min="1" type="range" orient="vertical"/>
       <input type="color" id="colorpicker" value="#ffffff"/>
-
-      <img id="canvasImg" style="width: 500px; height: 500px;">
+      
+      <div class="container" style="display: flex; padding-left: 6px;">
+        <img id="canvasImg" style="width: 500px; height: 500px;">
+      </div>
+      
     </div>
     
     <div id="imageHandlers">
