--- a/neonify/static/css/testing.css
+++ b/neonify/static/css/testing.css
@@ -12,19 +12,21 @@ head, body {
 #page {
   background-color:blue;
   width: 100%;
-  padding: 50px;
+  height: 90vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
   
 #left {
   background-color: orange;
+  float: left;
   width: 50%;
-  height: 100px;
-  padding: 50px;
+  height: 50vh;
+  padding: 0px;
 }
 
 #right {
   background-color: green;
-  width: 50%;
-  height: 100px;
-  padding: 50px;
+  height: 50vh;
+  margin-left: 50%
 }
