--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -33,7 +33,7 @@
     <div id="imageHandlers">
       <button onclick="saveDCanvas()">Save as Image</button>
       <button onclick="previewDCanvas()">Preview</button>
-      <button id="neonify" type="submit">Neonify</button>
+      <button id="neonify" type="submit" onclick="previewDCanvas()">Neonify</button>
       
     </div>
     <span id="neonified">?</span>
