Completed back-end
Script runs, processes, and displays image data to the screen with the neonified drawings provided by the user. The program still needs to be able to work for multiple colors and have better antialiasing, as well as a developed front-end. However, the back-end of the website is complete.

--- a/neonify/templates/canvas.html
+++ b/neonify/templates/canvas.html
@@ -33,10 +33,10 @@
     <div id="imageHandlers">
       <button onclick="saveDCanvas()">Save as Image</button>
       <button onclick="previewDCanvas()">Preview</button>
-      <button id="neonify" type="submit" onclick="previewDCanvas()">Neonify</button>
-      
+      <button id="neonify">Neonify</button>
+      <span id="neonified">Status: Waiting</span>
     </div>
-    <span id="neonified">?</span>
+    <img id="result" style="width: 500px; height: 500px;">
 
     <script src="/static/javascript/canvas.js"></script>
     <script src="/static/javascript/responses.js"></script>
